// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Tabs defaultTabs 1`] = `
<div
  className="Tabs__TabsContainerItem-sc-15tpvnt-0 cgNJtA"
>
  <div
    className="Tabs__TabItem-sc-15tpvnt-1 jHFIIe  "
  >
    <a
      href="#"
    >
      Details
    </a>
  </div>
  <div
    className="Popover__Container-sc-1bwoak-0 fFsabD"
  >
    <div
      className="Popover__Text-sc-1bwoak-1 ekMAAj"
      direction="top"
      width="218px"
    >
      Example with tooltip explaining tab
    </div>
    <div
      className="Tabs__TabItem-sc-15tpvnt-1 jHFIIe active "
    >
      <a
        href="#"
        tabIndex="-1"
      >
        Additional information
      </a>
    </div>
  </div>
  <div
    className="Tabs__TabItem-sc-15tpvnt-1 UpFlm  notification notification-97"
  >
    <a
      href="#"
    >
      Planning
    </a>
  </div>
</div>
`;

exports[`Storyshots Units/Tabs Default Tabs 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 hWsMxU"
  data-testid={null}
>
  <div
    className="Tabs__TabsContainerItem-sc-15tpvnt-0 cgNJtA"
  >
    <div
      className="Tabs__TabItem-sc-15tpvnt-1 jHFIIe  "
    >
      <a
        href="#"
      >
        Details
      </a>
    </div>
    <div
      className="Popover__Container-sc-1bwoak-0 fFsabD"
    >
      <div
        className="Popover__Text-sc-1bwoak-1 ekMAAj"
        direction="top"
        width="218px"
      >
        Example with tooltip explaining tab
      </div>
      <div
        className="Tabs__TabItem-sc-15tpvnt-1 jHFIIe active "
      >
        <a
          href="#"
          tabIndex="-1"
        >
          Additional information
        </a>
      </div>
    </div>
    <div
      className="Tabs__TabItem-sc-15tpvnt-1 UpFlm  notification notification-97"
    >
      <a
        href="#"
      >
        Planning
      </a>
    </div>
  </div>
</div>
`;
